<resources>
    <string name="app_name">GameSpace</string>
    <string name="label_description">Description</string>
    <string name="label_developer">Developer</string>
    <string name="total_reviews">%1$s Reviews</string>
    <string name="desc_back_to_previous_screen">Back to previous screen</string>
    <string name="desc_game_background_image">Game background image</string>
    <string name="desc_game_poster_image">Game poster image</string>
    <string name="desc_share_game">Share game</string>
    <string name="label_full_name">Full Name:</string>
    <string name="label_rifqi_lukmansyah">Rifqi Lukmansyah</string>
    <string name="label_email">Email:</string>
    <string name="hint_full_name">Enter full name</string>
    <string name="hint_email">Enter Email</string>
    <string name="label_email_dicoding">rifqilukmansyah2001@gmail.com</string>
    <string name="validation_full_name">Name can only contain letters</string>
    <string name="validation_email">Oops, invalid email format</string>
    <string name="desc_my_profile_pic">My profile pic</string>
    <string name="appbar_about_me">About Me</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove">Remove</string>
    <string name="cart">Cart</string>
    <string name="continue_to_payment">Continue to Payment</string>
    <string name="add">Add</string>
    <string name="label_for_myself">For Myself</string>
    <string name="label_for_my_family">For My Family</string>
    <string name="agreement_text">I agree to the <b>Terms of Service</b> and <b>Privacy Policy</b>, and acknowledge that I will receive information about product updates and promotions.</string>
    <string name="diskon_20">Diskon 20 %</string>
    <string name="hint_address">Address</string>
    <string name="label_date">Delivery date</string>
    <string name="pilih_tanggal">Choose Date</string>
    <string name="label_address">Address</string>
    <string name="label_payment">Choose Payment</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="summary_title">Proof Of Payment</string>
    <string name="back_to_home">Back to Home</string>
</resources>
