<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    tools:context=".Presentation.PaymentActivity">

    <TextView
        android:id="@+id/tvNameLabel"
        android:textSize="14sp"
        android:textColor="@color/light_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.rifqi.gamespace.component.FullNameEditText
        android:id="@+id/edtName"
        android:background="@drawable/bg_bordered_edit_text"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_full_name"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:padding="16dp"
        android:textSize="14sp"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/tvNameLabel" />

    <TextView
        android:id="@+id/tvEmailLabel"
        android:textSize="14sp"
        android:textColor="@color/light_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <com.rifqi.gamespace.component.EmailEditText
        android:id="@+id/edtEmail"
        android:hint="@string/hint_email"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bordered_edit_text"
        android:maxLines="1"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:textSize="14sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"/>

    <TextView
        android:id="@+id/tvDateLabel"
        android:textSize="14sp"
        android:textColor="@color/light_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <LinearLayout
        android:id="@+id/choose_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/bg_bordered_edit_text"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvDateLabel">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_calendar_month_24"
            android:layout_marginEnd="@dimen/dimen_16dp"
            app:tint="@color/light_grey" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pilih_tanggal"
            android:textColor="@color/light_grey"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvAddressLabel"
        android:textSize="14sp"
        android:textColor="@color/light_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_date" />

    <EditText
        android:id="@+id/edtAddress"
        android:hint="@string/hint_address"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bordered_edit_text"
        android:maxLines="1"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:textSize="14sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddressLabel"/>

    <TextView
        android:id="@+id/tvPaymentLabel"
        android:textSize="14sp"
        android:textColor="@color/light_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtAddress" />

    <Spinner
        android:id="@+id/spinnerPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tvPaymentLabel"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerPayment">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/label_for_myself"
            android:textColor="@color/light_grey" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_for_my_family"
            android:textColor="@color/light_grey" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/agreement_text"
        android:textColor="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btntopayment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/item_back_ground_lighter"
        android:includeFontPadding="false"
        android:paddingVertical="16dp"
        android:text="@string/confirm_payment"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAgreement"
        app:rippleColor="#40FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>
