<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_ground"
    tools:context=".Presentation.AboutActivity">

    <Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:navigationIcon="@drawable/ic_back"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="#DFDFDF"
            android:contentDescription="@string/desc_my_profile_pic" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tx_full_name"
        android:text="@string/label_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_medium"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginStart="@dimen/dimen_16dp" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:textColor="@color/back_ground"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:background="@drawable/bg_text_border"
        android:padding="@dimen/dimen_16dp"
        android:text="@string/label_rifqi_lukmansyah" />

    <TextView
        android:id="@+id/tx_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_medium"
        android:text="@string/label_email"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginStart="@dimen/dimen_16dp" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:textColor="@color/back_ground"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:background="@drawable/bg_text_border"
        android:padding="@dimen/dimen_16dp"
        android:text="@string/label_email_dicoding" />

</LinearLayout>